--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="logo-container">
 
                     <div class="logo-details">
-                        <img class ="small-image" src="/images/logo.png" alt="Anime Logo">
+                        <img class ="small-image" src="images/logo.png" alt="Anime Logo">
                         <span class="logo-tag">Anime</span>
                         <span class="logo-second-tag">Hub</span>
                     </div>
@@ -120,7 +120,7 @@
                         <p class="Question-Description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quis aspernatur animi aut, voluptates soluta ipsa tenetur excepturi explicabo enim sunt ratione, obcaecati quasi. Similique nisi omnis rerum distinctio ea? Dignissimos ex illum quam alias.</p>
                     </div>
                     <div class="comment-bottom">
-                        <img src="/images/one-piece-monkey-d-luffy-hd-wallpaper-preview.jpg" alt="">
+                        <img src="images/one-piece-monkey-d-luffy-hd-wallpaper-preview.jpg" alt="">
                         <span class="Username"><a href="">Username</a></span>
                     </div></div>
                     <div class="comments">
@@ -151,7 +151,7 @@
                                 <p class="Question-Description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quis aspernatur animi aut, voluptates soluta ipsa tenetur excepturi explicabo enim sunt ratione, obcaecati quasi. Similique nisi omnis rerum distinctio ea? Dignissimos ex illum quam alias.</p>
                             </div>
                             <div class="comment-bottom">
-                                <img src="/images/one-piece-monkey-d-luffy-hd-wallpaper-preview.jpg" alt="">
+                                <img src="images/one-piece-monkey-d-luffy-hd-wallpaper-preview.jpg" alt="">
                                 <span class="Username"><a href="">Username</a></span>
                             </div></div> <div class="comments">
                                 <div class="comment-top">
@@ -166,7 +166,7 @@
                                     <p class="Question-Description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quis aspernatur animi aut, voluptates soluta ipsa tenetur excepturi explicabo enim sunt ratione, obcaecati quasi. Similique nisi omnis rerum distinctio ea? Dignissimos ex illum quam alias.</p>
                                 </div>
                                 <div class="comment-bottom">
-                                    <img src="/images/one-piece-monkey-d-luffy-hd-wallpaper-preview.jpg" alt="">
+                                    <img src="images/one-piece-monkey-d-luffy-hd-wallpaper-preview.jpg" alt="">
                                     <span class="Username"><a href="">Username</a></span>
                                 </div></div> <div class="comments">
                                     <div class="comment-top">
@@ -181,7 +181,7 @@
                                         <p class="Question-Description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quis aspernatur animi aut, voluptates soluta ipsa tenetur excepturi explicabo enim sunt ratione, obcaecati quasi. Similique nisi omnis rerum distinctio ea? Dignissimos ex illum quam alias.</p>
                                     </div>
                                     <div class="comment-bottom">
-                                        <img src="/images/one-piece-monkey-d-luffy-hd-wallpaper-preview.jpg" alt="">
+                                        <img src="images/one-piece-monkey-d-luffy-hd-wallpaper-preview.jpg" alt="">
                                         <span class="Username"><a href="">Username</a></span>
                                     </div></div>  
                                     
